feat:added code for registration

--- a/HTML/registration.html
+++ b/HTML/registration.html
@@ -18,7 +18,7 @@ Address:<textarea rows="4" cols="20" maxlength="100" required></textarea><br><br
 <label>Company Website:</label><br><br>
 Choose country:<select>
 <option selected>India</option>
-<option>Uinted States</option>
+<option>United States</option>
 <option>Germany</option>
 <option>Japan</option>
 </select><br><br>
