--- a/Assignment-1/perfectsquare.html
+++ b/Assignment-1/perfectsquare.html
@@ -4,7 +4,7 @@
         <title>Perfect Square</title>
     </head>
 <body>
-    <table border="1px solid black">
+    <table border="1px solid black" align="center">
         <tr><td colspan=7 align="center">Example of Perfect Square using table</td></tr>
         <tr><th rowspan="7" width="100px">Int 1</th><th rowspan="2" width="100px">n*n</th><th colspan="5" width="350px">Int 2</th></tr>
         <tr><td align="center">1</td><td align="center">2</td><td align="center">3</td><td align="center">4</td><td align="center">5</td></tr>
